Revision history for Gimp-Perl extension.

	- scm2perl had broken cdr and cddr stubs...
        - fixed examples/font_table.

1.092 Wed Jun  2 14:52:29 CEST 1999
	- testsuite failed when !HAVE_PDL (and the whole package broke on
          systems with underpowered dynamic linkers).
        - gtk-1.0.x and gimp < 1.0.4 are no longer "officially" supported.
        - added COMPRESSION_*-constants for file_tiff.
        - added examples/pixelmap, needs doc!
        - probably fixed SIGPIPE problem in gimpdoc.
        - fixed pager bug in gimpdoc.
        - cleaned filehandle handling in Gimp/Net.pm.
        - streamlined config code again.
        - updated examples/parasite-editor, examples/mirrorsplit,
          examples/PDB.
        - Gimp::Net was broken (it used GIMP_PATH instead of just GIMP).

1.091 Sun May 23 13:21:34 CEST 1999
	- include a fake typemap.pdl.

1.09 Fri May 21 14:12:02 CEST 1999
        - added gimpdoc, a simple man-like help viewer.
	- corrected PDL version check to work with version 2.001.
        - new file Net.xs, containing protocol serializer.
        - new, faster and leaner protocol (bumped protocol version number).
        - added SvPV_nolen to ppport.h and made use of it everywhere.
        - renamed nolib => Module.
        - streamlined warning messages as not to scare the people away.
        - fixed a bug in check_for_typoe (correct TRUE and FALSE).
        - zero-copy piddle support should generally work now. Tile
          functions and network support is still missing, but...
        - experimental enhancements to the spawn/ hosttype.
        - Gimp::Feature no longer counts dos as unix-like.

1.089 Tue May 18 19:55:25 CEST 1999
	- added colourtoalpha.
	- made all internal C functions static -> less namespace bloat.
        - its possible to shorten the call $drawable->get->pixel_rgn
          to "just" $drawable->pixel_rgn.
        - made one-arg gimp_progress_init work again.
	- removed compatibility code from Lib.xs.